<resources>
    <string name="app_name">App Lock: Hide Photos &amp; Videos</string>
    <string name="title1">App Lock</string>
    <string name="default_theme">https://raw.githubusercontent.com/brijesh-ide/AppLock_Hide_Photos_Videos/master/themes/wallpaper/ABSTRACT/pexels-photo-1029611.webp</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="tmc_part_1">The application is notifying you to the presence of an app that provides several services that are essential information for safer and more efficient use. \n</string>
    <string name="tmc_text_1">By pressing the Accept button, I declare I have read and accepted the following condition of use.</string>
    <string name="tmc_text_2">If we find the app is being used outside its terms of use, we may restrict access to it.</string>
    <string name="tmc_text_3">Any type of modification to the app or its components is not allowed.</string>
    <string name="tmc_text_4">Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here.</string>
    <string name="tmc_text_5">We do not share any kind of your Personal Data with third parties.</string>
    <string name="following_link">Following link :\t</string>
    <string name="privacy_hyper"><b><u>Privacy Policy</u></b></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tmc_hyper"><b><u>Terms and Condition</u></b></string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="tmc_desc_click">You can find out more information by clicking on the</string>
    <string name="tmc">
Posting rules you should be taking care of before you start interaction on our website/application:
\n
\nAssuring you carry the rights and eligibility to post any form of content you are about to share. We never permit nudism on application/website.
\n
\nWe won\'t allow posting of sexually explicit content, sexually explicit text, images, or audio content depicting extreme sexual acts such as acts of posting Content that drives traffic to pornographic online services. Please note that we may make exceptions based on artistic, educational, historical, documentary, or scientific nature, or where there are other considerable benefits to the public at large.
\n
\nWe don\'t permit encouragement or applaud towards terrorism, formed crime scenes or hate association groups on our application/website. Attempting to sell sexual services or weapons and harmful drugs are also not permitted. We will remove reasonable threats of severity, hate arousing content/speech and the intentionally pointing of private individuals. We do not permit attacks/abuse based on skin colour, native, sex, gender, gender identity, sexual orientation, religion, disability or disease.
\n
\nGraphic violence is not allowed and we may remove videos or images of intense, graphic violence to make sure our application/website stays appropriate for everyone.
\n
\nIf anyone or any account is spotted doing the above restricted activities they can be booked and arrested for the same. If viewers spot any violations of the above rules they have the right to report the content to us by using the report feature given in our application/ website.
    </string>
    <string name="rate_us_1">Rate us!</string>
    <string name="do_you_want_to_really_exit">Do you want to really exit?</string>
    <string name="exit">Exit</string>
    <string name="permission_required">Permission Required</string>
    <string name="external_storage">External Storage</string>
    <string name="allow_to_access_photos_and_media_on_your_device">Allow to access photos and media on your device.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="please_grant_the_requested_permissions">Please grant the requested permissions.</string>
    <string name="no_result_found">No result found</string>
    <string name="grant_whatsapp_business_permission">Grant WhatsApp Business Permission</string>
    <string name="appnotinstalled">WhatsApp Is Not Installed Kindly Install It</string>
    <string name="yes">Yes</string>
    <string name="pernecessory">Permission necessary</string>
    <string name="write_neesory">Write Storage permission is necessary to Download Images and Videos!!!</string>
    <string name="preview_not">Preview Not available</string>
    <string name="somth_video_wrong">Something went wrong while playing video! Please try again</string>
    <string name="saved_to">Saved to: </string>
    <string name="stor_saver">Download</string>
    <string name="refre">Refreshed!</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_start">Draw the unlock pattern</string>
    <string name="lockscreen_access_pattern_detected">Password saved</string>
    <string name="lockscreen_access_pattern_cleared">Password removed</string>
    <string name="desc1">"Additional layer of security to prevent unauthorized access to personal information "</string>
    <string name="title2">Private Vault</string>
    <string name="desc2">Allows users to securely store their files, such as photos, videos, documents, and passwords.</string>
    <string name="title3">Image Intruder</string>
    <string name="desc3">Security feature that helps prevent unauthorized access to your locked apps.</string>
    <string name="title4">Hide Apps</string>
    <string name="desc4">" Users can select the apps they want to hide and will no longer be visible on the home screen "</string>
    <string name="share_txt">Hey view/download this image</string>
    <string name="share_image_via">Share File via...</string>
    <string name="folder_statuses">WhatsAppStatusSaver</string>
    <string name="image">Images</string>
    <string name="video">Videos</string>
    <string name="download">Download</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="oops">Oops! not Status Found 😔</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="biometric_title">Authenticate to access vault</string>
    <string name="biometric_desc">Place your finger on fingerprint scanner</string>
    <string name="something_went_wrong">Something went wrong! Please try again later..</string>
    <string name="password_gestrue_tips">Draw Password To Unlock</string>
    <string name="password_error_count">Passwords do not match. Please try again.</string>
    <string name="lock_first_btn" formatted="false">Protect(%s)</string>
    <string name="lock_recording_intro_header">Set an unlock password for the app</string>
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lock_recording_incorrect_too_short">There should be at least 4 points connected.</string>
    <string name="lock_pattern_entered_header">record password</string>
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
    <string name="lock_need_to_unlock_wrong">Passwords do not match, please try again.</string>
    <string name="lock_draw_unlock_pattern">Draw the unlock path</string>
    <string name="lock_enter_pin_code">Enter the numeric password</string>
    <string name="lock_pattern_confirmed_header"></string>
    <string name="num_create_text_01">Enter a 4-digit password to unlock</string>
    <string name="num_create_text_02">Enter again to confirm</string>
    <string name="num_create_text_03">Passwords do not match, please try again</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="password_short">Please enter at least 4 characters.</string>
    <string-array name="lock_time_array">
        <item>15 Second</item>
        <item>30 Second</item>
        <item>1 minute</item>
        <item>3 minute</item>
        <item>5 minute</item>
        <item>10 minute</item>
        <item>30 minute</item>
        <item>immediately</item>
    </string-array>
    <string name="dialog_tip">Your system is greater than or equal to 5.0, we need to obtain the "view application usage" permission</string>
    <string name="enter_valid_url">Enter Valid URL</string>
    <string name="ok">OK</string>
    <string name="getting_downloading_link">Getting Downloading Link...</string>
    <string name="nodeifittakeslonger">Loading.... \nNote if it takes longer then 1 min close the app and retry, if video or audio dose not play automatically then click on the play button</string>
    <string name="somthing">Something went wrong!</string>
    <string name="snapchatstory">SnapChat Story Downloader</string>
    <string name="genarating_download_link">Generating download link</string>
    <string name="error_occ">Error occurred!</string>
    <string name="yourdoncomple">Your Download Is Completed</string>
    <string name="downloading_des">Downloading</string>
    <string name="don_start">Downloading Start!</string>
    <string name="cancel">Cancel</string>
    <string name="somthing_webiste_panele_block">Website is blocked from Server Due to maintenance, please be patient…</string>
    <string name="title">Title</string>
    <string name="duration">Duration</string>
    <string name="description_goes_here">Description Goes Here</string>
    <string name="select_quality">Select Quality</string>
    <string name="hdlink">HD link</string>
    <string name="sdlink">SD link</string>
    <string name="lis">Your License is Invalid Make Sure You Have Entered A Valid Purchase Code</string>
    <string name="aio_auto">All Auto Download</string>
    <string name="invalid_url">\nInvalid Video URL or Check Internet Connection</string>
    <string name="logininsta">Login</string>
    <string name="urlisprivate">This Url Is Invalid Or Private Try After Logging In The App</string>
    <string name="enter_valid">Please Enter a valid URI</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="vimeo">Vimeo</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="tiktok">TikTok</string>
    <string name="snapchat">Snapchat</string>
    <string name="twitter">Twitter</string>
    <string name="pinterest">Pinterest</string>
    <string name="past_url_here">Paste link here..</string>
    <string name="paste_link">Paste Link</string>
    <string name="how_to_download">How To Download</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="logintoinstatitle">Login To SocialI</string>
    <string name="select_the_desigred_methode_to_download_tiktok_try_the_other_one_if_one_dosent_work">Select the desired server to download, try the other one if one doesn\'t work</string>
    <string name="itemunaval">ITEM UNAVAILABLE</string>
    <string name="calculator_password">Calculator Password</string>
    <string name="modify_password">Modify Password</string>
    <string name="give_us_5_stars">Give Us 5 Stars</string>
    <string name="share_app_to_friend">Share App to Friend</string>
    <string name="failed_unlock_attempts_limit">Failed unlock attempts limit</string>
    <string name="detect_break_in_unlock">Detect break-in unlock</string>
    <string name="detect_break_desc">Capture photo if the device gets \nunlocked after reaching the limit</string>
</resources>