<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.activity.PermissionsActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_required"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="16dp"
            android:textStyle="bold" />

        <com.adsmodule.api.adsModule.interfaces.CustomView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:adType="full"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_permission"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_storage" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/external_storage"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/allow_to_access_photos_and_media_on_your_device"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:thumb="@drawable/thumb_layer_list"
                app:showText="false"
                app:track="@drawable/track_backgrounds" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_grant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/rect_round_gradient_12"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/grant_permission"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</layout>