<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.activity.MainSettingsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_round_right_bottom_gradient_24"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:src="@drawable/baseline_arrow_back_ios_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="Settings"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/btn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:src="@drawable/baseline_more_vert_24"
                android:visibility="gone" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="afterDescendants"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/main"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_calculator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_24"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/dark_grey"
                        android:text="@string/calculator_password"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/btn_modify_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/dark_grey"
                        android:gravity="center_vertical"
                        android:paddingStart="40dp"
                        android:paddingEnd="@dimen/_4sdp"
                        android:text="@string/modify_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

                    <TextView
                        android:id="@+id/btn_rate_us"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/give_us_5_stars"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/baseline_star_24"
                        app:drawableTint="@color/dark_grey" />

                    <TextView
                        android:id="@+id/btn_share"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/share_app_to_friend"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/baseline_share_24"
                        app:drawableTint="@color/dark_grey" />

                    <TextView
                        android:id="@+id/btn_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/baseline_policy_24"
                        app:drawableTint="@color/dark_grey" />

                    <TextView
                        android:id="@+id/btn_tmc"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/terms_and_condition"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/ic_tmc" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/intruder"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/btn_failed"
                        android:layout_width="match_parent"
                        android:layout_height="46dp"
                        android:drawablePadding="16dp"
                        android:gravity="center_vertical"
                        android:text="@string/failed_unlock_attempts_limit"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:drawableStartCompat="@drawable/ic_rule_settings_rounded"
                        />
                    <TextView
                        android:id="@+id/tv_attempts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="40dp"
                        android:layout_marginTop="-12dp"
                        android:paddingEnd="@dimen/_4sdp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/_10sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_detect_break"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/ic_lock_alert"
                        android:drawablePadding="16dp"
                        android:text="@string/detect_break_in_unlock"
                        android:textSize="@dimen/_12sdp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="40dp"
                        android:layout_marginTop="-12dp"
                        android:paddingEnd="@dimen/_4sdp"
                        android:text="@string/detect_break_desc"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/_10sdp"
                        />

                </LinearLayout>

                <com.adsmodule.api.adsModule.interfaces.CustomView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:adType="full"
                    android:layout_margin="8dp"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>